k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudshift
  labels:
    app.kubernetes.io/part-of: cloudshift
